# pichi

./: .gitignore  .gitlint  AGENTS.md  BUILD.md  Cargo.toml  DESIGN-REVIEW.md  DESIGN.md  DILLO-CRATE-SPLIT.md  PLATFORMS.md  README.md  TODO.md  deny.toml  licenserc.toml
.cargo/: config.toml
.github/workflows/: ci.yml
arma/: .gitignore  Cargo.toml
arma/docs/: device-model.md
arma/src/: bootinfo.rs  build.rs  check.rs  initrd.rs  kconfig.rs  kernel.rs  main.rs  manifest.rs  pe.rs  planner.rs  tatu.rs
arma/src/base_dtb/: aarch64.rs  mod.rs  x86_64.rs
arma/tests/: dtb_structure.rs  images.rs  negative.rs  structural.rs
arma/tests/common/: mod.rs
carapace/: CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  SPEC.md
carapace/ci/: grep-unsafe.sh
carapace/src/: assemble.rs  attach.rs  chain.rs  detach.rs  error.rs  lib.rs  main.rs  name.rs  partition.rs  snapshot.rs  util.rs
carapace/src/cli/: attach.rs  detach.rs  mod.rs
carapace/src/dm/: device.rs  header.rs  mod.rs  table.rs  uapi.rs
carapace/src/verity/: algorithm.rs  mod.rs  superblock.rs
carapace/tests/: adversary.rs  attach_detach.rs
carapace/tests/common/: mod.rs
carapace/tests/fixtures/: build_carapace.sh
devtree/: Cargo.toml
devtree/fuzz/: Cargo.toml
devtree/fuzz/fuzz_targets/: fuzz_owned.rs  fuzz_parse.rs
devtree/fuzz/seeds/: README.md
devtree/fuzz/seeds/fuzz_overlay/: overlay_target_path.dtbo
devtree/fuzz/seeds/fuzz_parse/: overlay_expected.dtb
devtree/src/: lib.rs
devtree/tests/: memrsv.rs  merge.rs  overlay_errors.rs  parse.rs  phandle_errors.rs
devtree/tests/common/: mod.rs
devtree/tests/data/: overlay_base.dtb  overlay_base.dts  overlay_empty_body.dtbo  overlay_empty_body.dtso  overlay_expected.dts  overlay_fragment_no_target.dtso  overlay_nested_a.dtso  overlay_nested_b.dtso  overlay_phandles.dtbo  overlay_unknown_label.dtso  regenerate.sh
dillo/: Cargo.toml
dillo/.github/workflows/: ci.yml
dillo/crates/dillo-e2e-schema/: Cargo.toml
dillo/crates/dillo-e2e-schema/src/: lib.rs
dillo/crates/dillo-hypervisor/src/: kvm.rs  lib.rs  whp.rs
dillo/crates/dillo-pmi/fuzz/: Cargo.toml
dillo/crates/dillo-pmi/src/: caps.rs  error.rs  lib.rs  parse.rs
dillo/crates/dillo-pmi/tests/: adversarial.rs
dillo/crates/dillo-virtio-console/src/: lib.rs
dillo/crates/dillo-vm/src/: error.rs  fdt_writer.rs  gdb.rs  hvf_devices.rs  ioapic.rs  irq.rs  lib.rs  memory.rs  mmio_bus.rs  pci.rs  pio_pci.rs  placement.rs  serial_init.rs  virtio_mmio.rs  whp_devices.rs
dillo/crates/vhost-backend/: Cargo.toml
dillo/crates/vhost-backend/src/: lib.rs
dillo/crates/virtio-pci/: Cargo.toml
dillo/crates/virtio-pci/src/: lib.rs  transport.rs
dillo/crates/virtio/src/: device.rs  interrupt.rs  queue.rs
dillo/crates/vm-pci/: Cargo.toml
dillo/crates/vm-pci/src/: address.rs  bdf.rs  capability.rs
dillo/fuzz/: Cargo.toml
dillo/fuzz/fuzz_targets/: dhcp_parse.rs  dns_query.rs  ndp_parse.rs  net_demux.rs  pmi_parse.rs
dillo/src/: cpu_id.rs  launch.rs  lib.rs  machine_select.rs  main.rs  overlay.rs  placement.rs  platform.rs
dillo/src/machine_select/: runner.rs
dillo/src/machine_select/runner/: backend_select.rs  error.rs  gdb.rs  hvf_devices.rs  memory.rs
dillo/src/platform/: machine.rs
dillo/src/pmi_parse/: error.rs  parse.rs
dillo/tests/: architecture_cfg.rs  boot.rs  platform_adversarial.rs  pmi_adversarial.rs
dillo/tests/fixtures/init/: Cargo.toml
dillo/tests/fixtures/init/.cargo/: config.toml
dillo/tests/fixtures/init/src/: main.rs
dtb2acpi/: Cargo.toml
dtb2acpi/examples/: bench_populate.rs
dtb2acpi/src/: acpi_buffer.rs  count.rs  dtb.rs  error.rs  lib.rs  oem.rs
dtb2acpi/src/emit/: aml.rs  fadt.rs  mcfg.rs  mod.rs  rsdp.rs  sdt.rs  spcr.rs  xsdt.rs
dtb2acpi/tests/: cpu_status.rs  errors.rs  mixed_apic.rs  pipeline.rs
dtb2acpi/tests/data/: basic.dtb  basic.dts  bus_range_start_too_big.dtb  cells_malformed.dtb  cpu_high_apic_id.dts  cpu_no_reg.dtb  cpu_numa_node_id_u32_max.dtb  cpu_reg_too_big.dtb  cpu_reg_too_big.dts  cpu_status_all_disabled.dtb  cpu_status_all_disabled.dts  cpu_status_bsp_disabled.dts  cpu_status_disabled.dtb  cpu_status_fail.dtb  cpus_empty.dts  generate_many_cpus.sh  generate_too_many_cpus.sh  intc_no_reg.dts  lapic_too_high.dts  many_cpus.dtb  memory_disabled_hotpluggable.dtb  memory_hotpluggable.dtb  memory_hotpluggable.dts  memory_no_reg.dtb  memory_no_reg.dts  memory_numa_node_id_u32_max.dtb  memory_numa_node_id_u32_max.dts  memory_status_malformed.dtb  no_poweroff.dts  numa.dtb  numa_distance_map_no_matrix.dtb  numa_distance_map_no_matrix.dts  numa_high_apic_id.dtb  numa_high_apic_id.dts  numa_memory_only_domain.dtb  numa_memory_untagged.dts  numa_no_distance_map.dts  numa_node_id_malformed.dtb  numa_single_domain.dtb  numa_slit_asymmetric_conflict.dtb  (+21 more)
dtb2e820/: Cargo.toml
dtb2e820/tests/data/: bad_reg.dts  no_pci.dtb
pichi/: Cargo.toml
pichi/src/: cli.rs  config.rs  lib.rs  main.rs  system.rs
pichi/src/cmd/: images.rs  import.rs  inspect.rs  mod.rs  prune.rs  pull.rs  push.rs  registry_helpers.rs  rmi.rs  run.rs  streaming_sink.rs  tag.rs
pichi/tests/: cmd_images.rs  cmd_import.rs  cmd_inspect.rs  cmd_prune.rs  cmd_pull.rs  cmd_pull_bearer.rs  cmd_pull_push_roundtrip.rs  cmd_push.rs  cmd_rmi.rs  cmd_run.rs  cmd_tag.rs
scripts/: zot.sh
src/: cli.rs  config.rs  lib.rs  main.rs  system.rs
src/cmd/: build.rs  images.rs  import.rs  inspect.rs  load.rs  manifest.rs  manifest_ext.rs  mod.rs  prune.rs  pull.rs  push.rs  registry_helpers.rs  requirements.rs  rmi.rs  run.rs  save.rs  streaming_sink.rs  tag.rs  update.rs
tatu/: Cargo.toml  build.rs
tatu/src/: arch_x86_64.rs  bootinfo.rs  bootmem.rs  main.rs  sections.rs  workspace.rs
tests/: build_boot.rs  build_directive.rs  build_flatten.rs  build_pmi.rs  build_run.rs  cmd_images.rs  cmd_import.rs  cmd_import_pmi.rs  cmd_inspect.rs  cmd_prune.rs  cmd_pull.rs  cmd_pull_bearer.rs  cmd_pull_push_roundtrip.rs  cmd_push.rs  cmd_rmi.rs  cmd_run.rs  cmd_tag.rs
tests/common/: mod.rs
