[workspace]
resolver = "2"
members = [
    # Products (consumed by nothing else)
    "arma",
    "dillo",
    # Cross-product shared libraries (no single owner)
    "deps/devtree",
    # Shared test-support (dev-only): generic caching URL downloader
    "deps/burrow",
    # arma-owned (nested by sole consumer)
    "arma/deps/tatu",
    "arma/deps/tatu/deps/dtb2acpi",
    "arma/deps/tatu/deps/dtb2e820",
    # dillo-owned (nested by sole consumer)
    "dillo/deps/dillo-machine",
    "dillo/deps/dillo-machine-hvf",
    "dillo/deps/dillo-machine-kvm",
    "dillo/deps/dillo-machine-whp",
    "dillo/deps/dillo-mmio",
    "dillo/deps/dillo-mmio-uart",
    "dillo/deps/dillo-mmio-virtio",
    "dillo/deps/dillo-pci",
    "dillo/deps/dillo-pci-virtio",
    "dillo/deps/dillo-virtio-console",
    "dillo/deps/dillo-virtio",
    "dillo/deps/snuffler",
]
exclude = [
    # cargo-fuzz harnesses: nightly + libfuzzer-sys, built out-of-band.
    "dillo/fuzz",
    "deps/devtree/fuzz",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false
license = "Apache-2.0"

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
type_complexity = "allow"
similar_names = "allow"
struct_field_names = "allow"
needless_continue = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
too_many_lines = "allow"
missing_panics_doc = "allow"
needless_pass_by_value = "allow"
uninlined_format_args = "allow"

[workspace.dependencies]
# Cross-product shared crates
pmi = { git = "https://github.com/pichi-vm/pmi" }
devtree = { path = "deps/devtree" }

# dillo-internal crates
dillo-machine = { path = "dillo/deps/dillo-machine" }
dillo-machine-hvf = { path = "dillo/deps/dillo-machine-hvf" }
dillo-machine-kvm = { path = "dillo/deps/dillo-machine-kvm" }
dillo-machine-whp = { path = "dillo/deps/dillo-machine-whp" }
dillo-mmio = { path = "dillo/deps/dillo-mmio" }
dillo-mmio-uart = { path = "dillo/deps/dillo-mmio-uart" }
dillo-mmio-virtio = { path = "dillo/deps/dillo-mmio-virtio" }
dillo-pci = { path = "dillo/deps/dillo-pci" }
dillo-pci-virtio = { path = "dillo/deps/dillo-pci-virtio" }
dillo-virtio = { path = "dillo/deps/dillo-virtio" }
dillo-virtio-console = { path = "dillo/deps/dillo-virtio-console" }
# Error handling
anyhow = "1"
thiserror = "2"

# CLI
argh = "0.1"

# PE + CBOR
object = { version = "0.36", default-features = false, features = ["read_core", "pe", "std"] }
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"

# (FDT writer is hand-rolled in dillo/src/fdt_writer.rs because
# upstream vm-fdt rejects the literal `__overlay__` child-node name
# that DT overlay fragments require. See ARCH §7.1.)

# Memory + KVM (Linux)
vm-memory = { version = "0.17", default-features = false, features = ["backend-mmap", "backend-atomic"] }
kvm-ioctls = "0.24"
kvm-bindings = "0.14"

# Hypervisor backends
applevisor = "1"
applevisor-sys = "1"
windows-sys = { version = "0.61", features = ["Win32_System_Hypervisor"] }

# Battle-tested 16550 UART implementation (matches what the PoC
# uses) — the kernel's 8250 driver only enables ttyS0 if the probe
# (LCR, LSR, MCR loopback, scratch echo) succeeds. A hand-rolled
# stub usually fails one of those checks and Linux silently drops
# the console.
vm-superio = "0.8"

# Process / signal / fd plumbing
nix = { version = "0.30", features = ["fs", "process", "signal", "ioctl", "mman", "socket", "term"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Remote-debug (GDB Remote Serial Protocol)
gdbstub = "0.7"
gdbstub_arch = "0.3"

# Utility
zerocopy = { version = "0.8", features = ["derive"] }
vmm-sys-util = "0.15"

# tatu must fit its 2 MiB slab (linker ASSERT in tatu/linker/tatu.ld), so it
# must always be built with release-equivalent codegen even when the rest of
# the workspace is built in dev — a debug build's larger .text overflows the
# slab. tatu is consumed by arma as an artifact dependency, so the profile
# that applies is this workspace's, not tatu's own.
[profile.release]
opt-level = 3
lto = "thin"

[profile.dev.package.tatu]
opt-level = 3
debug-assertions = false
overflow-checks = false
