[package]
name = "arma"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "arma"
path = "src/main.rs"

[dependencies]
# tatu is embedded as a bare-metal binary via an artifact dependency. For now
# arma only builds PMIs for its native host arch, so each build has exactly one
# tatu artifact dependency and does not require Cargo multidep support.

pmi.workspace = true
ciborium = "0.2"
goblin = { version = "0.10", default-features = false, features = [
    "elf32",
    "elf64",
    "pe64",
    "alloc",
    "endian_fd",
    "std",
] }
vm-fdt = "0.3"
devtree = { path = "../deps/devtree" }
flate2 = "1"
ruzstd = "0.8"
zerocopy = { version = "0.8", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"

[dev-dependencies]
sha2 = "0.10"
tempfile = "3"
rstest = "0.23"
burrow = { path = "../deps/burrow" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
tatu = { path = "deps/tatu", artifact = "bin", target = "x86_64-unknown-none" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
tatu = { path = "deps/tatu", artifact = "bin", target = "aarch64-unknown-none" }
