[package]
name = "dillo"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "VMM that boots PMI files (Linux/KVM, macOS/HVF, Windows/WHP)"

[[bin]]
name = "dillo"
path = "src/main.rs"

[features]
default = []
# Gates tests that actually launch a VM (need /dev/kvm, HVF, WHP, and the
# OS permissions to use them). Off by default so `cargo test` runs anywhere;
# CI's hardware lane runs `cargo test -p dillo --features vm-tests`.
vm-tests = []

[dependencies]
dillo-machine.workspace = true
dillo-pmi.workspace = true
dillo-platform.workspace = true
dillo-mmio.workspace = true
dillo-mmio-uart.workspace = true
dillo-mmio-virtio.workspace = true
dillo-pci.workspace = true
dillo-pci-virtio.workspace = true
dillo-virtio.workspace = true
dillo-virtio-console.workspace = true
dillo-x86.workspace = true
vm-memory.workspace = true
pmi.workspace = true
argh.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
dillo-machine-kvm.workspace = true
nix.workspace = true
libc = "0.2"
gdbstub.workspace = true
gdbstub_arch.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
dillo-machine-hvf.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
dillo-machine-whp.workspace = true

[dev-dependencies]
# Boot/e2e tests build a PMI with arma and assert on the Report that snuffler
# emits from inside the guest.
arma = { path = "../arma", artifact = "bin" }      # image builder, host target
serde_json = "1"                                   # decode the Report on the host
rstest = "0.23"                                    # parameterized boot matrix
burrow = { path = "../deps/burrow" }               # cached kernel download
tempfile = "3"                                      # scratch dirs for PMIs
wait-timeout = "0.2"                                # cross-platform boot timeout
devtree.workspace = true

# snuffler is pulled once, as both a library (the Report schema, host target)
# and a binary artifact (the guest probe, cross-built for the guest musl
# triple that matches dillo's host arch — dillo boots same-arch guests).
# `lib = true` keeps the library on the host; `target` retargets only the
# binary. Same key in both cfg tables → one env var,
# `CARGO_BIN_FILE_SNUFFLER_snuffler`, regardless of arch.
[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
snuffler = { path = "deps/snuffler", artifact = "bin", lib = true, target = "x86_64-unknown-linux-musl" }

[target.'cfg(target_arch = "aarch64")'.dev-dependencies]
snuffler = { path = "deps/snuffler", artifact = "bin", lib = true, target = "aarch64-unknown-linux-musl" }

[lints]
workspace = true
