[package]
name = "dillo"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "VMM that boots PMI files (Linux/KVM, macOS/HVF, Windows/WHP)"

[[bin]]
name = "dillo"
path = "src/main.rs"

[features]
default = []
# Gates tests that actually launch a VM (need /dev/kvm, HVF, WHP, and the
# OS permissions to use them). Off by default so `cargo test` runs anywhere;
# CI's hardware lane runs `cargo test -p dillo --features vm-tests`.
vm-tests = []

[dependencies]
dillo-machine.workspace = true
dillo-mmio.workspace = true
dillo-mmio-uart.workspace = true
dillo-mmio-virtio.workspace = true
dillo-pci.workspace = true
dillo-pci-virtio.workspace = true
dillo-virtio.workspace = true
dillo-virtio-blk.workspace = true
dillo-virtio-console.workspace = true
# virtio-fs serves a host directory into the Linux guest; it runs in-process and
# reads files via std::fs, so it works on every host (incl. Windows/WHP).
dillo-virtio-fs.workspace = true
dillo-virtio-gpt.workspace = true
# virtio-net's frontend + NullBackend are cross-platform; its TAP/macvtap
# backends are `#[cfg(target_os = "linux")]` inside the crate, so it builds on
# every host.
dillo-virtio-net.workspace = true
dillo-config.workspace = true
dillo-devtree.workspace = true
pmi.workspace = true
object.workspace = true
serde.workspace = true
serde_json.workspace = true
ciborium.workspace = true
argh.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
dillo-machine-kvm.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
dillo-machine-hvf.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
dillo-machine-whp.workspace = true

# virtio-vsock bridges to host Unix sockets, so it is Unix-only. The Windows
# (WHP) lane builds dillo without it; `--vsock` is `#[cfg(unix)]` in main.rs.
[target.'cfg(unix)'.dependencies]
dillo-virtio-vsock.workspace = true

[dev-dependencies]
# Boot/e2e tests build a PMI with arma and assert on the Report that snuffler
# emits from inside the guest.
arma = { path = "../arma", artifact = "bin" }      # image builder, host target
serde_json = "1"                                   # decode the Report on the host
rstest = "0.23"                                    # parameterized boot matrix
burrow = { path = "../deps/burrow" }               # cached kernel download
tempfile = "3"                                      # scratch dirs for PMIs
wait-timeout = "0.2"                                # cross-platform boot timeout
sha2 = "0.10"                                       # verify pinned kernel digests
hex = "0.4"                                         # hex-encode digests

# snuffler is pulled once, as both a library (the Report schema, host target)
# and a binary artifact (the guest probe, cross-built for the guest musl
# triple that matches dillo's host arch — dillo boots same-arch guests).
# `lib = true` keeps the library on the host; `target` retargets only the
# binary. Same key in both cfg tables → one env var,
# `CARGO_BIN_FILE_SNUFFLER_snuffler`, regardless of arch.
[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
snuffler = { path = "deps/snuffler", artifact = "bin", lib = true, target = "x86_64-unknown-linux-musl" }

[target.'cfg(target_arch = "aarch64")'.dev-dependencies]
snuffler = { path = "deps/snuffler", artifact = "bin", lib = true, target = "aarch64-unknown-linux-musl" }

[lints]
workspace = true
