[package]
name = "devtree-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.devtree]
path = ".."
features = ["alloc"]

# Prevent this from being picked up by a parent workspace.
[workspace]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_parse"
path = "fuzz_targets/fuzz_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_overlay"
path = "fuzz_targets/fuzz_overlay.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_owned"
path = "fuzz_targets/fuzz_owned.rs"
test = false
doc = false
bench = false
