[package]
name = "vhost-backend"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Shared vhost-user backend harness for dillo device backends. Bridges vhost-user-backend's daemon to an inherited-fd UnixStream (the upstream daemon won't accept already-connected streams). Migrated from ~/Projects/dillo/vhost-backend."

[dependencies]
vhost.workspace = true
vm-memory.workspace = true
vmm-sys-util.workspace = true
log.workspace = true
thiserror.workspace = true
vhost-user-backend.workspace = true
rustix = { version = "1", features = ["fs", "termios", "process", "event"] }

[dev-dependencies]
# Tests instantiate a Frontend to talk to our adapter — needs the
# `vhost-user-frontend` feature on top of the lib's `vhost-user-backend`.
vhost = { version = "0.16", features = ["vhost-user-backend", "vhost-user-frontend"] }

[lints]
workspace = true
