[workspace]

[package]
name = "hello-init"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "hello-init"
path = "src/main.rs"

[dependencies]
libc = "0.2"
serde_json = "1"
dillo-e2e-schema = { path = "../../../crates/dillo-e2e-schema" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
